--- a/partials/timeline.html
+++ b/partials/timeline.html
@@ -11,7 +11,7 @@
 			<div class="row">
 			<div class="col-sm-4 col-xs-12">
 				<img ng-if="!programmation.artiste.picture" src="img/placeholder/500x500.gif" style="width:100%;" alt="photo">
-				<img ng-if="programmation.artiste.picture" src="/img/artistes/{{programmation.artiste.picture}}" style="width:100%;" alt="photo"/>
+				<img ng-if="programmation.artiste.picture" src="img/artistes/{{programmation.artiste.picture}}" style="width:100%;" alt="photo"/>
 			</div>
 			<div class="col-sm-8 col-xs-12">
 				<h2>
