--- a/app/partials/timeline.html
+++ b/app/partials/timeline.html
@@ -2,16 +2,16 @@
 <ul class="cbp_tmtimeline">
 
 	<li ng-repeat="programmation in programmations | isConcerned:current_date">
-		<time class="cbp_tmtime" datetime="{{programmation.date_start}}">
-			<span >4/10/13</span> 
-			<span class="begin" ng-bind="programmation.date_start | date:'HH:mm'"></span> 
+		<time class="cbp_tmtime">
+			<span ></span>
+			<span class="begin" ng-bind="programmation.date_start | date:'HH:mm'"></span>
 			<span class="end" ng-bind="programmation.date_end | date:'HH:mm'"></span></time>
 		<div class="cbp_tmicon"></div>
 		<div class="cbp_tmlabel">
 			<div class="row">
 			<div class="col-sm-4 col-xs-12 picture">
 				<img ng-if="!programmation.artiste.picture" src="img/placeholder/500x500.gif" style="width:100%;" alt="photo">
-				<img ng-if="programmation.artiste.picture" src="img/artistes/{{programmation.artiste.picture}}" style="width:100%;" alt="photo"/>
+				<img ng-if="programmation.artiste.picture" ng-src="img/artistes/{{programmation.artiste.picture}}" style="width:100%;" alt="photo"/>
 			</div>
 			<div class="col-sm-8 col-xs-12">
 				<h2>
