--- a/partials/home.html
+++ b/partials/home.html
@@ -66,9 +66,9 @@
 											<div class="w-blog-entry-short" ng-if="news_partials.type=='PartialText'">
 												<p ng-bind-html="news_partials.text"></p>
 											</div>
-											<div class="flex-video widescreen" ng-if="news_partials.type=='PartialYoutube'">
+											<!--<div class="flex-video widescreen" ng-if="news_partials.type=='PartialYoutube'">
 												<iframe ng-src="{{getSrcYoutube(news_partials.youtube_slug)}}" frameborder="0" allowfullscreen=""></iframe>
-											</div>
+											</div>-->
 										</div>
 
 									</div>
