Change on content page

--- a/app/partials/association.html
+++ b/app/partials/association.html
@@ -4,7 +4,107 @@
 <section id="contact" class="l-section">
 		
 
-	<div class="l-subsection">
+	<div class="l-subsection color_alternate" id="adherent">
+		<div class="l-subsection-h">
+			<div class="l-subsection-hh g-html i-cf">
+
+				
+				<h4 class="highlight"><strong>Comment nous aider gratuitement et sans effort ?</strong></h4>
+				
+				<p class="size_big">
+					Après deux ans d'existence, notre association organise son 3éme évènement les 13 & 14 Juin 2014.<br>
+					En prenant de l'ampleur, nous devrons, à l'avenir, solliciter des subventions auprès des collectivités territoriales.<br>
+
+					Aussi, afin de soutenir le festival "Ariège' n Zic"auprès des décideurs, nous vous invitons ardemment à devenir gratuitement Adhérent de l'Association !!!<br>
+
+					C'est par le nombre que nous pourrons peser... <br>
+
+					Pour assurer la pérennité du Festival et préserver des tarifs abordables: <br> </p>
+
+					<h4 class="highlight"><strong>
+					Adhérez à l'Association FDLM!
+					</strong></h4>
+
+					<p class="size_big">
+					En remerciement, une conso de votre choix attendra chaque nouvel adhérent au bar du festival.<br>
+
+					De plus, l'asso accueille les bonnes volontés qui donneraient une partie de leur temps pendant le festival pour aider les bénévoles. Filous et tire-aux-flans s'abstenir!! <br>
+						Nous ne partageons aucune de vos données personnelles avec un tiers sans votre accord explicite
+					</p>
+					<div class="w-form contacts_form">
+						<div class="w-form-h contacts_form_form">
+							<form class="g-form" action="http://faitesdelamusique.vieassociative.fr/" method="post" id="contact_form">
+								<div class="g-form-row" id="name_row">
+									<div class="g-form-row-label">
+										<label class="g-form-row-label-h" for="name">Votre nom</label>
+									</div>
+									<div class="g-form-row-field">
+										<i class="fa fa-user"></i>
+										<input type="text" name="name" id="name">
+									</div>
+									<div class="g-form-row-state" id="name_state"></div>
+								</div>
+								<div class="g-form-row" id="firstname_row">
+									<div class="g-form-row-label">
+										<label class="g-form-row-label-h" for="firstname">Votre prénom</label>
+									</div>
+									<div class="g-form-row-field">
+										<i class="fa fa-user"></i>
+										<input type="text" firstname="firstname" id="firstname">
+									</div>
+									<div class="g-form-row-state" id="firstname_state"></div>
+								</div>
+								<div class="g-form-row" id="email_row">
+									<div class="g-form-row-label">
+										<label class="g-form-row-label-h" for="email">Adresse mail (obligatoire)</label>
+									</div>
+									<div class="g-form-row-field">
+										<i class="fa fa-envelope"></i>
+										<input type="email" name="email" id="email">
+									</div>
+									<div class="g-form-row-state" id="email_state"></div>
+								</div>
+								<div class="g-form-row">
+									<div class="g-form-row-label"></div>
+									<div class="g-form-row-field">
+										<button class="g-btn type_primary" id="message_send"><span><i class="fa fa-envelope-o"></i>S'inscrire</span></button>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+				
+
+
+			</div>
+		</div>
+	</div>
+
+</section>
+<section class="next">
+	
+	
+	<div class="l-subsection" style="background-image:url(img/placeholder/parallax.png);" id="benevole">
+		<div class="l-subsection-h" style="margin-top:50px;">
+			<div class="l-subsection-hh g-html i-cf">
+			
+				<h2 class="highlight"><strong>contactez nous pour rejoindre nos bénévoles !</strong></h2>
+				
+				<div class="w-contacts">
+					<div class="w-contacts-h">
+						<div class="w-contacts-list">
+							<div class="w-contacts-item">
+								<i class="fa fa-envelope-o"></i>
+								<span class="w-contacts-item-value"><a href="mailto:FDLMteam@gmail.com?subject=Je souhaite devenir bénèvole" target="_blank">Postuler à l'adresse FDLMteam@gmail.com !</a></span>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
+	<div class="l-subsection color_alternate">
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 
@@ -33,105 +133,8 @@
 						</div>
 						
 					</div>
-				</div>
+				</div>x
 				
-				<div class="g-hr type_invisible"></div>
-				
-				<a class="g-btn type_primary green" smooth-scroll-jquery target="adherent" speed="1000"><span><i class="fa fa-arrow-down"></i>Devenir membre</span></a>
-				<a class="g-btn type_primary green" smooth-scroll-jquery target="benevole" speed="1000"><span><i class="fa fa-arrow-down"></i>Devenir bénévoles</span></a>
-				
-			</div>
-		</div>
-	</div>
-
-</section>
-<section class="next">
-	
-	<div class="l-subsection color_alternate" id="adherent">
-		<div class="l-subsection-h">
-			<div class="l-subsection-hh g-html i-cf">
-
-				
-				<h4 class="highlight"><strong>DEVENEZ ADHÉRENT DE L'ASSOCIATION EN 1 MIN !</strong></h4>
-				
-				<p class="size_big">Nous ne partageons aucune de vos données personnelles avec un tiers sans votre accord explicite</p>
-
-				<div class="w-form contacts_form">
-					<div class="w-form-h contacts_form_form">
-						<form class="g-form" action="http://faitesdelamusique.vieassociative.fr/" method="post" id="contact_form">
-							<div class="g-form-row" id="name_row">
-								<div class="g-form-row-label">
-									<label class="g-form-row-label-h" for="name">Votre nom</label>
-								</div>
-								<div class="g-form-row-field">
-									<i class="fa fa-user"></i>
-									<input type="text" name="name" id="name">
-								</div>
-								<div class="g-form-row-state" id="name_state"></div>
-							</div>
-							<div class="g-form-row" id="firstname_row">
-								<div class="g-form-row-label">
-									<label class="g-form-row-label-h" for="firstname">Votre prénom</label>
-								</div>
-								<div class="g-form-row-field">
-									<i class="fa fa-user"></i>
-									<input type="text" firstname="firstname" id="firstname">
-								</div>
-								<div class="g-form-row-state" id="firstname_state"></div>
-							</div>
-							<div class="g-form-row" id="email_row">
-								<div class="g-form-row-label">
-									<label class="g-form-row-label-h" for="email">Adresse mail (obligatoire)</label>
-								</div>
-								<div class="g-form-row-field">
-									<i class="fa fa-envelope"></i>
-									<input type="email" name="email" id="email">
-								</div>
-								<div class="g-form-row-state" id="email_state"></div>
-							</div>
-							<div class="g-form-row" id="phone_row">
-								<div class="g-form-row-label">
-									<label class="g-form-row-label-h" for="phone">Téléphone (facultatif) :</label>
-								</div>
-								<div class="g-form-row-field">
-									<i class="fa fa-phone"></i>
-									<input type="text" name="phone" id="phone">
-								</div>
-								<div class="g-form-row-state" id="phone_state"></div>
-							</div>
-							<div class="g-form-row">
-								<div class="g-form-row-label"></div>
-								<div class="g-form-row-field">
-									<button class="g-btn type_primary" id="message_send"><span><i class="fa fa-envelope-o"></i>S'inscrire</span></button>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-				
-
-
-			</div>
-		</div>
-	</div>
-		
-	<div class="l-subsection" style="background-image:url(img/placeholder/parallax.png);" id="benevole">
-		<div class="l-subsection-h" style="margin-top:50px;">
-			<div class="l-subsection-hh g-html i-cf">
-			
-				<h2 class="highlight"><strong>Devenez bénévole !</strong></h2>
-				
-				<div class="w-contacts">
-					<div class="w-contacts-h">
-						<div class="w-contacts-list">
-							<div class="w-contacts-item">
-								<i class="fa fa-envelope-o"></i>
-								<span class="w-contacts-item-value"><a href="mailto:FDLMteam@gmail.com?subject=Je souhaite devenir bénèvole" target="_blank">Postuler à l'adresse FDLMteam@gmail.com !</a></span>
-							</div>
-						</div>
-					</div>
-				</div>
-
 			</div>
 		</div>
 	</div>
