--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -6,7 +6,7 @@
 
 				<h1 class="home-heading">
 					<span class="home-heading-line bold">Ariège'n Zic</span><br>
-					<span class="home-heading-line">Le festival de musique en Ariège </span>
+					<span class="home-heading-line">L’Ariège de toutes les musiques</span>
 				</h1>
 				
 				<a class="g-btn type_primary size_big green" smooth-scroll-jquery target="about" speed="1000"><span>Continuez votre navigation <i class="fa fa-arrow-down"></i></span></a>
