--- a/partials/prog-vendredi.html
+++ b/partials/prog-vendredi.html
@@ -34,14 +34,14 @@
 							<div class="w-gallery-tnails-h">
 								<a class="w-gallery-tnail" href="img/affiche_302x402.png" title="Recto de l'affiche Ariege'n Zik">
 									<span class="w-gallery-tnail-h">
-										<img class="w-gallery-tnail-img" ng-src="img/affiche_302x402.png" alt="Verso de l'affiche Ariege'n Zik">
+										<img ng-cloak class="w-gallery-tnail-img" ng-src="img/affiche_302x402_min.jpg" alt="Verso de l'affiche Ariege'n Zik">
 										<span class="w-gallery-tnail-hover"><i class="fa fa-search"></i></span>
 									</span>
 								</a>
 							
 								<a class="w-gallery-tnail" href="img/ariegenzik_fly_verso.png" title="Verso du flyer Ariege'n Zik">
 									<span class="w-gallery-tnail-h">
-										<img class="w-gallery-tnail-img" ng-src="img/ariegenzik_fly_verso.png" alt="Verso du flyer Ariege'n Zik">
+										<img ng-cloak class="w-gallery-tnail-img" ng-src="img/ariegenzik_fly_verso_min.jpg" alt="Verso du flyer Ariege'n Zik">
 										<span class="w-gallery-tnail-hover"><i class="fa fa-search"></i></span>
 									</span>
 								</a>
@@ -58,13 +58,13 @@
 </section>
 <script type="text/javascript">
 	window.resizeHandler();
-	//window.scrollTo(0,0);
-	/**$(document).ready(function() {
+	window.scrollTo(0,0);
+	$(document).ready(function() {
 	  $('.affiches .w-gallery-tnails-h').magnificPopup({
 		  delegate: 'a', // child items selector, by clicking on it popup will open
 		  type: 'image',
 		  gallery:{enabled:true}
 		  // other options
 		});
-	});**/
+	});
 </script>
