--- a/partials/timeline.html
+++ b/partials/timeline.html
@@ -10,7 +10,7 @@
 		<div class="cbp_tmlabel">
 			<div class="row">
 				<div class="col-sm-4 col-xs-12 picture">
-					<img ng-if="!programmation.artiste.picture" src="img/placeholder/500x500.gif" style="width:100%;" alt="photo">
+					<img ng-if="!programmation.artiste.picture" ng-src="img/placeholder/500x500.gif" style="width:100%;" alt="photo">
 					<img ng-if="programmation.artiste.picture" ng-src="img/artistes/{{programmation.artiste.picture}}" style="width:100%;" alt="photo"/>
 				</div>
 				<div class="col-sm-8 col-xs-12">
