--- a/app/partials/timeline.html
+++ b/app/partials/timeline.html
@@ -10,7 +10,7 @@
 		<div class="cbp_tmlabel">
 			<div class="row">
 				<div class="col-sm-4 col-xs-12 picture">
-					<img ng-if="!programmation.artiste.picture" src="img/placeholder/500x500.gif" style="width:100%;" alt="photo">
+					<img ng-if="!programmation.artiste.picture" ng-src="img/placeholder/500x500.gif" style="width:100%;" alt="photo">
 					<img ng-if="programmation.artiste.picture" ng-src="img/artistes/{{programmation.artiste.picture}}" style="width:100%;" alt="photo"/>
 				</div>
 				<div class="col-sm-8 col-xs-12">
@@ -22,13 +22,13 @@
 						{{programmation.artiste.url_describe}}
 					</a>
 				</div>
-				<div class="col-sm-12 col-xs-12">
-					<div onclick="$(this).parent().find('div.hidden-music').toggle();$(this).find('i').toggle();">
+				<div class="col-sm-12 col-xs-12" ng-init="music_showed = False;" ng-if="programmation.artiste.youtube_dual_video || programmation.artiste.soundcloud_tracks">
+					<div ng-click="music_showed=!music_showed">
 						Ecouter
-						<i class="fa fa-plus-circle fa-4" style="color:#F8862C;"></i>
-						<i class="fa fa-minus-circle fa-4" style="color:#F8862C;display:none;"></i>
+						<i ng-show="music_showed" class="fa fa-plus-circle fa-4" style="color:#F8862C;"></i>
+						<i ng-show="!music_showed" class="fa fa-minus-circle fa-4" style="color:#F8862C;"></i>
 					</div>
-					<div class="hidden-music" style="display:none;">
+					<div class="hidden-music" ng-if="music_showed">
 						<div ng-repeat="soundcloud_track in programmation.artiste.soundcloud_tracks">
 							<iframe width="100%" height="166" scrolling="no" frameborder="no" ng-src="{{soundcloud_track.url}}">
 							</iframe>
