--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -9,7 +9,7 @@
 					<span class="home-heading-line">L’Ariège de toutes les musiques</span>
 				</h1>
 				
-				<a class="g-btn type_primary size_big green" smooth-scroll-jquery target="about" speed="1000"><span>Continuez votre navigation <i class="fa fa-arrow-down"></i></span></a>
+				<a class="g-btn type_primary size_big green" scroll-to="#about" duration="800" offset="50"><span>Continuez votre navigation <i class="fa fa-arrow-down"></i></span></a>
 
 			</div>
 		</div>
@@ -67,7 +67,7 @@
 												<p ng-bind-html="news_partials.text"></p>
 											</div>
 											<div ng-if="news_partials.type=='PartialYoutube'">
-												<div ng-click="focused=!focused">
+												<div class="button_show" ng-click="focused=!focused">
 														Voir vidéo
 														<i ng-show="!focused" class="fa fa-plus-circle fa-4" style="color:#F8862C;"></i>
 														<i ng-show="focused" class="fa fa-minus-circle fa-4" style="color:#F8862C;"></i>
