--- a/partials/archive.html
+++ b/partials/archive.html
@@ -19,7 +19,7 @@
 				<div class="g-hr type_invisible"></div>
 
 
-				<a class="g-btn type_primary size_big green" smooth-scroll-jquery target="part-2" speed="1000"><span>Edition 2013 <i class="fa fa-arrow-down"></i></span></a>
+				<a class="g-btn type_primary size_big green" scroll-to="#part-2" duration="1000" offset="80"><span>Edition 2013 <i class="fa fa-arrow-down"></i></span></a>
 				
 				
 			</div>
