--- a/partials/home.html
+++ b/partials/home.html
@@ -67,7 +67,7 @@
 												<p ng-bind-html="news_partials.text"></p>
 											</div>
 											<div ng-if="news_partials.type=='PartialYoutube'">
-												<div ng-click="focused=!focused">
+												<div class="button_show" ng-click="focused=!focused">
 														Voir vidéo
 														<i ng-show="!focused" class="fa fa-plus-circle fa-4" style="color:#F8862C;"></i>
 														<i ng-show="focused" class="fa fa-minus-circle fa-4" style="color:#F8862C;"></i>
