--- a/partials/affiches.html
+++ b/partials/affiches.html
@@ -19,3 +19,13 @@
 		</div>
 	</div>
 </div>
+<script type="text/javascript">
+	$(document).ready(function() {
+	  $('.w-gallery-tnails-h').magnificPopup({
+		  delegate: 'a', // child items selector, by clicking on it popup will open
+		  type: 'image',
+		  gallery:{enabled:true}
+		  // other options
+		});
+	});
+</script>
