minor changes on css

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -180,3 +180,13 @@ a:active {
 .button_show{
     cursor: pointer;
 }
+#countdown{
+    display: block;
+    font-size: 55px;
+    margin-bottom: 20px;
+    padding-top: 30px;
+}
+
+.imgpos_atleft .w-blog-entry{
+    padding-bottom: 10px;
+}
