Update content and add SEO possibility

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -27,8 +27,8 @@
 				<span id="countdown">
 				</span>
 				<div>
-				<a class="g-btn type_primary" href="#programmation-ariege-n-zik-vendredi-13-juin-2014"><span> Programme du Vendredi 13 Juin</span></a>
-				<a class="g-btn type_primary" href="#programmation-ariege-n-zik-samedi-14-juin-2014"><span>Programme du Samedi 14 Juin</span></a>
+				<a class="g-btn type_primary" href="/#!/programmation-ariege-n-zik-vendredi-13-juin-2014"><span> Programme du Vendredi 13 Juin</span></a>
+				<a class="g-btn type_primary" href="/#!/programmation-ariege-n-zik-samedi-14-juin-2014"><span>Programme du Samedi 14 Juin</span></a>
 				</div>
 			</div>
 		</div>
