--- a/app/partials/prog-vendredi.html
+++ b/app/partials/prog-vendredi.html
@@ -9,7 +9,7 @@
 				<h4><strong>Deux jours de folies</strong></h4>
 				
 				<a class="g-btn type_primary green" scroll-to="#vendredi" duration="1000" offset="80"><span><i class="fa fa-arrow-down"></i> Vendredi 13 Juin</span></a>
-				<a class="g-btn type_primary" href="#programmation-ariege-n-zik-samedi-14-juin-2014"><span>Samedi 14 Juin <i class="fa fa-share"></i></span></a>
+				<a class="g-btn type_primary" href="/#!/#programmation-ariege-n-zik-samedi-14-juin-2014"><span>Samedi 14 Juin <i class="fa fa-share"></i></span></a>
 				
 			</div>
 		</div>
