--- a/partials/archive.html
+++ b/partials/archive.html
@@ -119,21 +119,6 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/placeholder/500x500.gif" alt="member photo" />
-									</div>
-									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/no-limit-paradox" target="_blank"><i class="fa fa-chevron-right"></i> Voir DJ NO Limit Paradox</a></h4>
-										<div class="w-team-member-role">Trance Progressive, Full on Night</div>
-										<div class="w-team-member-role">
-											Présent le vendredi 21 Juin 2013 03h00-05h00 
-										</div>
-									</div>
-								</div>
-							</div>
-						
-							<div class="w-team-member">
-								<div class="w-team-member-h">
-									<div class="w-team-member-image">
 										<img src="img/fdlm/GastonFive-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
@@ -150,7 +135,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/placeholder/500x500.gif" alt="member photo" />
+										<img src="img/artistes/tremix1.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<h4 class="w-team-member-name"><a href="#artiste/tremix" target="_blank"><i class="fa fa-chevron-right"></i> Voir Tremix</a></h4>
@@ -180,23 +165,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/placeholder/500x500.gif" alt="member photo" />
-									</div>
-									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/tremix" target="_blank"><i class="fa fa-chevron-right"></i> Voir DJ Chill Bill</a></h4>
-										<div class="w-team-member-role">Funky Electro Break</div>
-											
-										<div class="w-team-member-role">
-											Présent le samedi 22 Juin 2013 01h45-03h45
-										</div>
-									</div>
-								</div>
-							</div>
-					
-							<div class="w-team-member">
-								<div class="w-team-member-h">
-									<div class="w-team-member-image">
-										<img src="img/placeholder/500x500.gif" alt="member photo" />
+										<img src="img/fdlm/psykoyot-500x500.png" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<h4 class="w-team-member-name"><a href="#artiste/tremix" target="_blank"><i class="fa fa-chevron-right"></i> Voir DJ Psykoyot</a></h4>
@@ -243,30 +212,22 @@
 			
 				<h3>Nos <strong>sponsors</strong> qui rendent l'évènement <strong>possible</strong></h3>
 				
-				<div class="w-clients type_carousel columns_5">
-					<div class="w-clients-h">
-						<div class="w-clients-list">
-							<div class="w-clients-list-h">
-								<a class="w-clients-item" href="javascript:void(0);">
-									<img src="http://www.chamonix.com/images/fiche/sitraCOS518219_353917_logo-super-u.gif" alt="Client logo" />
-								</a>
-								<a class="w-clients-item" href="javascript:void(0);">
-									<img src="http://www.annuaire-mairie.fr/panneau-malegoude.png" alt="Client logo" />
-								</a>
-								<a class="w-clients-item" href="javascript:void(0);">
-									<img src="http://www.chamonix.com/images/fiche/sitraCOS518219_353917_logo-super-u.gif" alt="Client logo" />
-								</a>
-								<a class="w-clients-item" href="javascript:void(0);">
-									<img src="http://www.chamonix.com/images/fiche/sitraCOS518219_353917_logo-super-u.gif" alt="Client logo" />
-								</a>
-								<a class="w-clients-item" href="javascript:void(0);">
-									<img src="http://www.chamonix.com/images/fiche/sitraCOS518219_353917_logo-super-u.gif" alt="Client logo" />
-								</a>
-							</div>
+				<div class="w-clients-h">
+					<div class="w-clients-list">
+						<div class="w-clients-list-h">
+							<a class="w-clients-item" href="javascript:void(0);">
+								<img src="http://upload.wikimedia.org/wikipedia/fr/c/c0/Super_U_logo.png" alt="Client logo" />
+							</a>
+							<a class="w-clients-item" href="javascript:void(0);">
+								<img src="http://www.annuaire-mairie.fr/panneau-malegoude.png" alt="Client logo" />
+							</a>
+							<a class="w-clients-item" href="javascript:void(0);">
+								<img src="img/mairie_mirepoix.gif" alt="Client logo" />
+							</a>
 						</div>
-						<a class="w-clients-nav to_prev disabled" href="javascript:void(0)" title="Show previous"></a>
-						<a class="w-clients-nav to_next" href="javascript:void(0)" title="Show next"></a>
 					</div>
+					<a class="w-clients-nav to_prev disabled" href="javascript:void(0)" title="Show previous"></a>
+					<a class="w-clients-nav to_next" href="javascript:void(0)" title="Show next"></a>
 				</div>
 				
 			</div>
