--- a/partials/contact.html
+++ b/partials/contact.html
@@ -19,6 +19,8 @@
 					</div>
 				</div>
 
+                <img src="img/info.png" alt="Informations Festival Ariege'n Zic"/>
+
 			</div>
 		</div>
 	</div>
@@ -47,7 +49,7 @@
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 
-				<a class="g-btn type_default" href="#association-faites-de-la-musique"><span><i class="fa fa-reply"></i>En savoir plus sur l'association</span></a>
+				<a class="g-btn type_default" href="/#!/association-faites-de-la-musique"><span><i class="fa fa-reply"></i>En savoir plus sur l'association</span></a>
 				
 			</div>
 		</div>
