--- a/app/partials/archive.html
+++ b/app/partials/archive.html
@@ -1,14 +1,14 @@
 <!-- page: OUR TEAM -->
 <section id="team" class="l-section">
 	
-	<div class="l-subsection">
+	<div class="l-subsection" style="background-image:url(img/placeholder/parallax.png);">
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
 				<p class="subtitle">Changement de date, changement de nom</p>
 				<h2 class="highlight"><strong>Faites de la Musique devient Ariège'n Zic</strong></h2>
 				
-				<p class="size_big">Tandis que la Fdlm Team finit le démontage et le rangement de nos installations, nous nous retournons déjà avec une fierté mêlée de nostalgie sur ce week-end magique qui s'achève.<br>
+				<p class="size_big">
 				Merci aux 600 participants qui ont honoré Malegoude de leur bonne humeur.<br>
 				Gratitude pour le travail impressionnant des 20 bénévoles de l'Asso et l'aide spontanée de nombreux festivaliers.<br>
 				Mille mercis aux groupes et artistes qui ont animé nos deux scènes et réalisé des JAM SESSIONS d'un niveau remarquable jusqu'à l'aube.<br>
@@ -21,7 +21,7 @@
 
 				<a class="g-btn type_primary size_big green" scroll-to="#part-2" duration="1000" offset="80"><span>Edition 2013 <i class="fa fa-arrow-down"></i></span></a>
 				
-				
+				<img src="img/panorama.jpg" style="padding-top:30px;"></img>
 			</div>
 		</div>
 	</div>
@@ -31,16 +31,9 @@
 <!-- page: OUR TEAM -->
 <section id="part-2" class="l-section">
 	
-	<div class="l-subsection">
+	<div class="l-subsection" style="background-image:url(img/placeholder/parallax.png);">
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
-			
-				<p class="subtitle">LineUp de 2013?</p>
-				
-				<p class="size_big">Nos styles ... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
 				
 				<div class="g-hr type_invisible"></div>
 				
