--- a/app/partials/prog-samedi.html
+++ b/app/partials/prog-samedi.html
@@ -6,9 +6,9 @@
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
-				<h4><strong>Deux jours de folies</strong></h4>
+				<h4 style="padding-top: 40%;color:black;"></h4>
 				
-				<a class="g-btn type_primary" href="/#!/programmation-ariege-n-zik-vendredi-13-juin-2014"><span><i class="fa fa-reply"></i> Vendredi 13 Juin</span></a>
+				<a class="g-btn type_primary" href="/#!/programmation-ariege-n-zic-vendredi-13-juin-2014"><span><i class="fa fa-reply"></i> Vendredi 13 Juin</span></a>
 				<a class="g-btn type_primary green" scroll-to="#samedi" duration="1000" offset="80"><span>Samedi 14 Juin <i class="fa fa-arrow-down"></i></span></a>
 				
 			</div>
