--- a/app/partials/archive.html
+++ b/app/partials/archive.html
@@ -47,7 +47,7 @@
 										<img src="img/fdlm/WhiteCardRadio-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-											<h4 class="w-team-member-name"><a href="#artiste/white-card-radio" target="_blank"><i class="fa fa-chevron-right"></i> White Card Radio</a></h4>
+											<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> White Card Radio</h4>
 										<h4 class="w-team-member-name"></h4>
 										<div class="w-team-member-role">Electro Impro Jazz</div>
 										<div class="w-team-member-role">
@@ -64,7 +64,7 @@
 									</div>
 									<div class="w-team-member-meta">
 										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name"><a href="#artiste/theorie-des-cordes" target="_blank"><i class="fa fa-chevron-right"></i> La théorie des Cordes</a></h4>
+											<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> La théorie des Cordes</h4>
 											<div class="w-team-member-role">Rock Progressif - Jazz Rock</div>
 											<div class="w-team-member-role">
 												Présent le vendredi 21 Juin 2013 20h30-23h00 
@@ -81,7 +81,7 @@
 									</div>
 									<div class="w-team-member-meta">
 										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name"><a href="#artiste/guitar-hero-beatmaster" target="_blank"><i class="fa fa-chevron-right"></i> Voir Guitar Hero Beatmasher</a></h4>
+											<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Guitar Hero Beatmasher</h4>
 											<h4 class="w-team-member-name"></h4>
 											<div class="w-team-member-role">Psybient - Rock Psychedelique</div>
 											<div class="w-team-member-role">
@@ -99,7 +99,7 @@
 									</div>
 									<div class="w-team-member-meta">
 										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name"><a href="#artiste/drivin-south" target="_blank"><i class="fa fa-chevron-right"></i> Voir Drivin' South</a></h4>
+											<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Drivin' South</h4>
 											<div class="w-team-member-role">Blues Rock Funk</div>
 											<div class="w-team-member-role">
 												Présent le vendredi 21 Juin 2013 00h30-03h00 
@@ -115,7 +115,7 @@
 										<img src="img/fdlm/GastonFive-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/gaston-five" target="_blank"><i class="fa fa-chevron-right"></i> Voir Gaston Five</a></h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Gaston Five</h4>
 										<div class="w-team-member-role">Rock</div>
 										<div class="w-team-member-role">
 											Présent le samedi 22 Juin 2013 18h30-21h00 
@@ -131,7 +131,7 @@
 										<img src="img/artistes/tremix1.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/tremix" target="_blank"><i class="fa fa-chevron-right"></i> Voir Tremix</a></h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Tremix</h4>
 										<div class="w-team-member-role">Ska Rock Balkan Reggae Swing</div>
 										<div class="w-team-member-role">
 											Présent le samedi 22 Juin 2013 21h00-00h00 
@@ -146,7 +146,7 @@
 										<img src="img/fdlm/DaKrewLab-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name">Da Krew Lab</h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Da Krew Lab</h4>
 										<div class="w-team-member-role">Exp Electro Break Drum'n Tek</div>
 										<div class="w-team-member-role">
 											Présent le samedi 22 Juin 2013 00h00-01h45
@@ -161,7 +161,7 @@
 										<img src="img/fdlm/psykoyot-500x500.png" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/tremix" target="_blank"><i class="fa fa-chevron-right"></i> Voir DJ Psykoyot</a></h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> DJ Psykoyot</h4>
 										<div class="w-team-member-role">Trance Trance full on Night</div>
 										<div class="w-team-member-role">
 											Présent le samedi 22 Juin 2013 03h45-04h30 puis 5h30-7h00
@@ -176,7 +176,7 @@
 										<img src="img/fdlm/Sychodelicious-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/synchodelicious" target="_blank"><i class="fa fa-chevron-right"></i> Voir Sychodelicious</a></h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Sychodelicious</h4>
 										<div class="w-team-member-role">Trance Trance full on Night</div>
 										<div class="w-team-member-role">
 											Présent le samedi 22 Juin 2013 04h30-05h30
