--- a/app/partials/archive.html
+++ b/app/partials/archive.html
@@ -158,7 +158,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/psykoyot-500x500.png" alt="member photo" />
+										<img src="img/fdlm/psykoyot-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> DJ Psykoyot</h4>
