--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -1,5 +1,5 @@
 <!-- page: CONTACT -->
-<section ng-cloack>
+<section>
 	
 
 	<div class="l-subsection" style="background-image:url(img/placeholder/parallax.png);">
@@ -19,7 +19,7 @@
 					</div>
 				</div>
 
-                <img src="img/info.png" alt="Informations Festival Ariege'n Zic"/>
+                <img ng-src="img/info.png" style="width:60%;" alt="Informations Festival Ariege'n Zic"/>
 
 			</div>
 		</div>
