--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -115,7 +115,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/hassah-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/hassah-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Voir Hassah</h4>
@@ -130,7 +130,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/DaKrewLab-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/DaKrewLab-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Voir Da Krew Lab</h4>
@@ -145,7 +145,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/LesBoozeBrothers-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/LesBoozeBrothers-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Booze Brothers</h4>
@@ -160,7 +160,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/asap-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/asap-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> ASAP</h4>
