--- a/app/partials/archive.html
+++ b/app/partials/archive.html
@@ -21,7 +21,7 @@
 
 				<a class="g-btn type_primary size_big green" scroll-to="#part-2" duration="1000" offset="80"><span>Edition 2013 <i class="fa fa-arrow-down"></i></span></a>
 				
-				<img src="img/panorama.jpg" style="padding-top:30px;"></img>
+				<img ng-src="img/panorama.jpg" style="width:100%;padding-top:30px;"></img>
 			</div>
 		</div>
 	</div>
@@ -44,7 +44,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/WhiteCardRadio-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/WhiteCardRadio-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 											<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> White Card Radio</h4>
@@ -60,7 +60,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/LaTheorieDesCordes-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/LaTheorieDesCordes-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<div class="w-team-member-meta-h">
@@ -77,7 +77,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/GuitarHeroBeatmasher-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/GuitarHeroBeatmasher-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<div class="w-team-member-meta-h">
@@ -95,7 +95,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/Drivin-South-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/Drivin-South-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<div class="w-team-member-meta-h">
@@ -112,7 +112,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/GastonFive-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/GastonFive-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Gaston Five</h4>
@@ -128,7 +128,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/artistes/tremix1.jpg" alt="member photo" />
+										<img ng-src="img/artistes/tremix1.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Tremix</h4>
@@ -143,7 +143,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/DaKrewLab-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/DaKrewLab-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Da Krew Lab</h4>
@@ -158,7 +158,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/psykoyot-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/psykoyot-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> DJ Psykoyot</h4>
@@ -173,7 +173,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/Sychodelicious-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/Sychodelicious-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Sychodelicious</h4>
@@ -209,13 +209,13 @@
 					<div class="w-clients-list">
 						<div class="w-clients-list-h">
 							<a class="w-clients-item" href="javascript:void(0);">
-								<img src="http://upload.wikimedia.org/wikipedia/fr/c/c0/Super_U_logo.png" alt="Client logo" />
+								<img ng-src="http://upload.wikimedia.org/wikipedia/fr/c/c0/Super_U_logo.png" alt="Client logo" />
 							</a>
 							<a class="w-clients-item" href="javascript:void(0);">
-								<img src="http://www.annuaire-mairie.fr/panneau-malegoude.png" alt="Client logo" />
+								<img ng-src="http://www.annuaire-mairie.fr/panneau-malegoude.png" alt="Client logo" />
 							</a>
 							<a class="w-clients-item" href="javascript:void(0);">
-								<img src="img/mairie_mirepoix.gif" alt="Client logo" />
+								<img ng-src="img/mairie_mirepoix.gif" alt="Client logo" />
 							</a>
 						</div>
 					</div>
